--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
     <head>
-        <title>首页</title>
+        <title>压力很大的BLOG</title>
     </head>
     <body>
-        我测试一下，哈哈
+        <div class="header">我来组成头部</div>
+        <div class="content">
+            <div class="side">左边栏</div>
+            <div class="posts">这里放所有post</div>
+        </div>
+        <div class="footer">版权申明</div>
     </body>
 </html>
