--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     </head>
     <body>
         <div class="header">我来组成头部</div>
-        <div class="content">
-            <div class="side">左边栏</div>
-            <div class="posts">这里放所有post</div>
+        <div class="main content">
+            <div id="side" class="fl side">左边栏</div>
+            <div id="posts" class="posts">这里放所有post</div>
         </div>
         <div class="footer">版权申明</div>
     </body>
