--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <title>压力很大的BLOG</title>
     </head>
     <body>
-        <div class="main header">我来组成头部</div>
+        <div class="header">我来组成头部</div>
         <div class="main content">
             <div id="side" class="fl side">左边栏</div>
             <div id="posts" class="posts">这里放所有post</div>
         </div>
-        <div class="footer">版权申明</div>
+        <div class="main footer">版权申明</div>
     </body>
 </html>
