--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>压力很大的BLOG</title>
     </head>
     <body>
-        <div class="header">我来组成头部</div>
+        <div class="header"><a href="/">我来组成头部</a></div>
         <div class="main content">
             <div id="side" class="fl side">左边栏</div>
             <div id="posts" class="posts">这里放所有post</div>
