--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
         <div class="header"><a class="fl mt40 ml20" href="/">我来组成头部</a></div>
         <div class="main content">
             <div id="side" class="fl side">左边栏</div>
-            <div id="posts" class="posts">这里放所有post</div>
+            <div id="posts" class="posts">
+                <dl>
+                    一条post，测试用
+                </dl>
+            </div>
         </div>
         <div class="main footer">版权申明</div>
     </body>
