--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="header"><a class="fl mt40 ml20" href="/">我来组成头部</a></div>
         <div class="main content">
             <div id="side" class="fl side">左边栏</div>
-            <div id="posts" class="posts">
+            <div id="posts" class="posts ml200">
                 <dl>
                     一条post，测试用
                 </dl>
