--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <div id="side" class="fl side">左边栏</div>
             <div id="posts" class="posts ml200">
                 <dl>
+                    <a class="title">这是一个标题</a>
                     一条post，测试用
                 </dl>
             </div>
