--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
             <div id="side" class="fl side">左边栏</div>
             <div id="posts" class="posts ml200">
                 <dl>
+                    <div class="clear"></div>
                     <a class="fl title">这是一个标题</a>
                     <dd class="fl">
                     一条post，测试用
                     </dd>
+                    <div class="clear"></div>
                 </dl>
             </div>
         </div>
