--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div id="posts" class="posts ml200">
                 <dl>
                     <div class="clear"></div>
-                    <a class="fl title">这是一个标题</a>
+                    <dt class="fl title">这是一个标题</dt>
                     <dd class="fl">
                     一条post，测试用
                     </dd>
