--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     </head>
     <body>
         <div class="header"><a class="fl mt40 ml20" href="/">我来组成头部</a></div>
-        <div class="main content">
+        <div class="content">
             <div id="side" class="fl side">左边栏</div>
             <div id="posts" class="posts ml200">
                 <dl>
                     <dt class="fl">这是一个标题</dt>
-                    <div class="clear"></div>
                     <dd class="fl">
                     一条post，测试用
                     </dd>
