--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="header"><a class="fl mt40 ml20" href="/">我来组成头部</a></div>
         <div class="content">
             <div id="side" class="fl side">左边栏</div>
-            <div id="posts" class="fl posts ml220">
+            <div id="posts" class="posts ml220">
                 <dl>
                     <dt class="fl">这是一个标题</dt>
                     <dd class="fl">
