--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="content">
             <div id="side" class="fl side">左边栏</div>
             <div id="posts" class="posts ml220">
-                <dl>
+                <dl class="fl">
                     <dt class="fl">这是一个标题</dt>
                     <dd class="fl">
                     一条post，测试用
