--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <div class="content">
             <div id="side" class="fl side">左边栏</div>
             <div id="posts" class="posts ml220">
-                <dl class="fl">
-                    <dt class="fl">这是一个标题</dt>
-                    <dd class="fl">
+                <dl>
+                    <dt>这是一个标题</dt>
+                    <dd>
                     一条post，测试用
                     </dd>
                 </dl>
