--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
         <div class="content">
             <div id="side" class="fl side">左边栏</div>
             <div id="posts" class="posts ml220">
-                <dl>
-                    <dt>这是一个标题</dt>
-                    <dd>
-                    一条post，测试用
-                    </dd>
-                </dl>
+                <div>一个post</div>
+                <div>第二个post</div>
             </div>
         </div>
         <div class="main footer">版权申明</div>
