--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <body>
         <div class="header"><a class="fl mt40 ml20" href="/">我来组成头部</a></div>
         <div class="content">
-            <div id="side" class="fl side">左边栏</div>
-            <div id="posts" class="posts ml220">
-                <div>一个post</div>
-                <div>第二个post</div>
+            <div id="side" class="fl side">
+                <div class="wrapper">左边栏</div>
+            </div>
+            <div id="posts" class="posts ml200">
+                <div class="wrapper">
+                    <div>一个post</div>
+                    <div>第二个post</div>
+                </div>
             </div>
         </div>
         <div class="main footer">版权申明</div>
