--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
             </div>
             <div id="posts" class="posts ml200">
                 <div class="wrapper">
-                    <div>一个post</div>
-                    <div>第二个post</div>
+                    <dl>
+                        <dt>2012-3-11</dt><dd>倒数第一个post</dd>
+                    </dl>
+                    <dl>
+                        <dt>2012-3-10</dt><dd>倒数第二个post</dd>
+                    </dl>
                 </div>
             </div>
         </div>
