--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div id="posts" class="posts ml200">
                 <div class="wrapper">
                     <dl>
-                        <dt>2012-3-11</dt><dd>倒数第一个post</dd>
+                        <dt>一个post的标题</dt><dd>我是内容我是内容我是内容</dd>
                     </dl>
                     <dl>
                         <dt>2012-3-10</dt><dd>倒数第二个post</dd>
