--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="wrapper">
                     <dl>
                         <dt>一个post的标题</dt><dd>我是内容我是内容我是内容</dd>
-                        <dd> <div class="fr">  ☆ 有N个评论 </div></dd>
+                        <dd> <div class="fr commend">☆ N个评论(展开评论)</div></dd>
                     </dl>
                     <dl>
                         <dt>2012-3-10</dt><dd>倒数第二个post</dd>
