--- a/index.html
+++ b/index.html
@@ -4,25 +4,47 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link href="a.css" type="text/css" rel="stylesheet" charset="utf-8" />
         <title>压力很大的BLOG</title>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+        <script type="text/javascript" src="underscore-min.js"></script>
+        <script type="text/javascript">
+            function render_list(datas){
+                var template = _.template($("#post_list_template").html());
+                html=template(datas);
+                $("#list_container").html(html);
+            }
+            var params=window.location.hash;
+            $(function(){
+                    $.getJSON("/list.json",{},function(data,textStatus){
+                            render_list(data);
+                    });
+              }
+             );
+        </script>
     </head>
     <body>
         <div class="header"><a class="fl mt40 ml20" href="/">我来组成头部</a></div>
         <div class="content">
             <div id="side" class="fl side">
-                <div class="wrapper">左边栏</div>
+                <img class="fl ml40" src="images/me1-1.jpg"/>
+                <div class="fl mt40 disp">我还没想好介绍怎么写，所以这里存在的文字都是子虚乌有的</div>
             </div>
             <div id="posts" class="posts ml200">
-                <div class="wrapper">
-                    <dl>
-                        <dt>一个post的标题</dt><dd>我是内容我是内容我是内容</dd>
-                        <dd> <div class="fr commend">☆ N个评论(展开评论)</div></dd>
-                    </dl>
-                    <dl>
-                        <dt>2012-3-10</dt><dd>倒数第二个post</dd>
-                    </dl>
+                <div class="wrapper" id="list_container">
                 </div>
             </div>
         </div>
         <div class="main footer">版权申明</div>
     </body>
+    <script id="post_list_template" type="text/template">
+        <%_.each(data,function(post){%>
+        <dl>
+           <dt class="h20">
+           <span class="fl"><%=post.title%></span><span class="fr timestamp mt10"> &gt;发布时间&nbsp;<%=post.date%></span>
+               <span class="slear"></span>
+           </dt>
+           <dd><%=post.disp%></dd>
+           <dd> <div class="fr commend">☆ N个评论(展开评论)</div></dd>
+       </dl>
+       <%});%>
+    </script>
 </html>
