--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             var params=window.location.hash;
             $(function(){
                     $.getJSON("/list.json",{},function(data,textStatus){
+                            alert(data);
                             render_list(data);
                     });
               }
