--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             }
             var params=window.location.hash;
             $(function(){
-                    $.getJSON("/list.json",{},function(data,textStatus){
+                    $.getJSON("/list.json",function(data,textStatus){
                             alert(data);
                             render_list(data);
                     });
