--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
                     $.getJSON(
                         "/list.json",
                         function(data){
-                            alert(data);
-                            //render_list(data);
+                            render_list(data);
                         }
                     );
               }
