--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                  if(_.isNull(params)||_.isNaN(params)){
                      show_index();
                  }else{
-                     alert("show post "+params);
+                     alert("show post "+params.length);
                  }
              }
             );
