--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             }
             $(function(){
                  var params=window.location.hash;
-                 if(params.length>0)){
+                 if(params.length>0){
                      alert("show post "+params);
                  }else{
                      show_index();
