--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                         "/blogs/"+name,
                         function(data){
                             alert(data);
+                            var converter = new Showdown.converter();
+                            var html = converter.makeHtml(data);
+                            alert(html)
                         }
                 );
             }
