--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 $("#list_container").html(html);
             }
             function show_post(name){
-                $("#post_list_template").html("");
-                $("#post_list_template").show();
-                $(".loading").show();
+                $("#list_container").html("");
+                $("#list_container").show();
+                $("#loading").show();
                 $.get(
                         "/blogs/"+name,
                         function(data){
@@ -29,14 +29,14 @@
                 );
             }
             function show_index(){
-                $(".loading").show();
+                $("#loading").show();
                 $("#post-content").html("");
                 $("#post-content").hide();
                 $.getJSON(
                         "/list.json",
                         function(data){
-                            $(".loading").hide();
-                            $("#post_list_template").show();
+                            $("#loading").hide();
+                            $("#list_container").show();
                             render_list(data);
                         }
                     );
@@ -63,7 +63,7 @@
                 <div class="wrapper" id="list_container">
                 </div>
                 <div id="post-content"></div>
-                <div class="loading" style="display:none;"> <img src="images/loading.gif"/> </div>
+                <div id="loading" class="loading" style="display:none;"> <img src="images/loading.gif"/> </div>
             </div>
         </div>
         <div class="main footer">版权申明</div>
