--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 $("#list_container").html(html);
             }
             function show_post(name){
+                window.location.hash="#!"+name;
                 $("#list_container").html("");
                 $("#list_container").hide();
                 $("#loading").show();
@@ -44,7 +45,8 @@
             $(function(){
                  var params=window.location.hash;
                  if(params.length>0){
-                     alert(params);
+                     name=params.split('!')[1]
+                     show_post(name);
                  }else{
                      show_index();
                  }
