--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                <span class="slear"></span>
            </dt>
            <dd><%=post.disp%></dd>
-           <dd> <div class="fr commend">☆   评论(<a href="/#disqus_thread"></a>)</div></dd>
+           <dd> <div class="fr commend">☆   评论(<a href="/#!<%=post.name%>"></a>)</div></dd>
        </dl>
        <%});%>
     </script>
