--- a/index.html
+++ b/index.html
@@ -10,17 +10,24 @@
         <script type="text/javascript" src="/showdown.js"></script>
         <script src="/highlight.pack.js"></script>
         <script type="text/javascript">
+            function getParameter(name){ 
+                var search = document.location.search;
+                var pattern = new RegExp("[?&]"+name+"\=([^&]+)", "g");
+                var matcher = pattern.exec(search);
+                var items = null;
+                if(null != matcher){
+                    items = decodeURIComponent(matcher[1]);
+                }
+                return items;
+            }
+
             function render_list(datas){
                 var template = _.template($("#post_list_template").html());
                 html=template(datas);
                 $("#list_container").html(html);
             }
-            function goto_url(name){
-                window.location.hash="#!"+name;
-                window.location.reload(true);
-            }
+
             function show_post(name){
-                window.location.hash="#!"+name;
                 $("#list_container").html("");
                 $("#list_container").hide();
                 $("#loading").show();
@@ -37,6 +44,7 @@
                         }
                 );
             }
+
             function show_index(){
                 $("#loading").show();
                 $("#post-text").html("");
@@ -50,12 +58,12 @@
                         }
                     );
             }
+
             $(function(){
-                 var params=window.location.hash;
-                 if(params.length>0){
-                     name=params.split('!')[1]
-                     show_post(name);
-                     }else{
+                 var params=getParameter("p");
+                 if(_.isNull(params)&&params.length>0){
+                     show_post(params);
+                 }else{
                      show_index();
                  }
              }
@@ -110,11 +118,11 @@
         <%_.each(data,function(post){%>
         <dl>
            <dt class="h20">
-           <span class="fl"> <a href="javascript:void(0);" onclick="goto_url('<%=post.name%>');"><%=post.title%></a></span><span class="fr timestamp mt10"> &gt;发布时间&nbsp;<%=post.date%></span>
+           <span class="fl"> <a href="/index.html?p=<%=post.name%>"><%=post.title%></a></span><span class="fr timestamp mt10"> &gt;发布时间&nbsp;<%=post.date%></span>
                <span class="slear"></span>
            </dt>
            <dd><%=post.disp%></dd>
-           <dd> <div class="fr commend">☆   评论(<a href="/#!<%=post.name%>"></a>)</div></dd>
+           <dd> <div class="fr commend">☆   评论(<a href="/index.html?p=<%=post.name%>#disqus_thread"></a>)</div></dd>
        </dl>
        <%});%>
     </script>
