--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <link href="styles/dark.css" type="text/css" rel="stylesheet" charset="utf-8" />
         <title>压力很大的BLOG</title>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-        <script type="text/javascript" src="/underscore-min.js"></script>
-        <script type="text/javascript" src="/showdown.js"></script>
-        <script src="/highlight.pack.js"></script>
+        <script type="text/javascript" src="underscore-min.js"></script>
+        <script type="text/javascript" src="showdown.js"></script>
+        <script src="highlight.pack.js"></script>
         <script type="text/javascript">
             function getParameter(name){ 
                 var search = document.location.search;
@@ -32,7 +32,7 @@
                 $("#list_container").hide();
                 $("#loading").show();
                 $.get(
-                        "/blogs/"+name,
+                        "blogs/"+name,
                         function(data){
                             var converter = new Showdown.converter();
                             var html = converter.makeHtml(data);
@@ -50,7 +50,7 @@
                 $("#post-text").html("");
                 $("#post-content").hide();
                 $.getJSON(
-                        "/list.json",
+                        "list.json",
                         function(data){
                             $("#loading").hide();
                             $("#list_container").show();
@@ -60,18 +60,20 @@
             }
 
             $(function(){
-                 var params=getParameter("p");
-                 if(_.isNull(params)){
-                     show_index();
-                 }else{
-                     show_post(params);
-                 }
+                $("#show_home").hide();
+                $("#header").mousemove(function(){$("#show_home").show()}).mouseout(function(){$("#show_home").hide()});
+                var params=getParameter("p");
+                if(_.isNull(params)){
+                    show_index();
+                }else{
+                    show_post(params);
+                }
              }
             );
         </script>
     </head>
     <body>
-        <div class="header"><a class="fl mt40 ml20" href="/">我来组成头部</a></div>
+        <div class="header"><a class="fl mt40 ml20" id="header" href="/">我来组成头部</a> <img id="show_home" class="fl mt30" src="images/home.gif"/></div>
         <div class="content">
             <div id="side" class="fl side">
                 <img class="fl ml40" src="images/me1-1.jpg"/>
@@ -100,7 +102,7 @@
                 </div>
             </div>
         </div>
-        <div class="main footer">版权申明</div>
+        <div class="main footer">版权申明:这个博客的所有文字版权如未经声明，均为李明（压力很大同志）所有。<br/>2012~?</div>
         <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
     var disqus_shortname = 'alexandersblognew'; // required: replace example with your forum shortname
@@ -118,11 +120,11 @@
         <%_.each(data,function(post){%>
         <dl>
            <dt class="h20">
-           <span class="fl"> <a href="/index.html?p=<%=post.name%>"><%=post.title%></a></span><span class="fr timestamp mt10"> &gt;发布时间&nbsp;<%=post.date%></span>
+           <span class="fl"> <a href="index.html?p=<%=post.name%>"><%=post.title%></a></span><span class="fr timestamp mt10"> &gt;发布时间&nbsp;<%=post.date%></span>
                <span class="slear"></span>
            </dt>
            <dd><%=post.disp%></dd>
-           <dd> <div class="fr commend">☆   评论(<a href="/index.html?p=<%=post.name%>#disqus_thread"></a>)</div></dd>
+           <dd> <div class="fr commend">☆   评论(<a href="index.html?p=<%=post.name%>#disqus_thread"></a>)</div></dd>
        </dl>
        <%});%>
     </script>
