--- a/index.html
+++ b/index.html
@@ -73,11 +73,16 @@
         </script>
     </head>
     <body>
-        <div class="header"><a class="fl mt40 ml20" id="header" href="/">我来组成头部</a> <img id="show_home" class="fl mt30" src="images/home.gif"/></div>
+        <div class="header"><a class="fl mt40 ml20" id="header" href="/">&gt;&gt;&gt;压力很大的BLOG</a> <img id="show_home" class="fl mt30" src="images/home.gif"/></div>
         <div class="content">
             <div id="side" class="fl side">
                 <img class="fl ml40" src="images/me1-1.jpg"/>
-                <div class="fl mt40 disp">我还没想好介绍怎么写，所以这里存在的文字都是子虚乌有的</div>
+                <div class="fl mt40 disp">
+                    <!-- 这里是我的自我介绍：开始 //-->
+                    80后，程序猿，所以压力很大。现就职于<a href="http://www.codoon.com">咕咚网</a>，一个绿色的、欢乐的运动社区。<br/>我的联系方式：<br/>superpowerlee<img src="images/at.jpeg"/>gmail.com<br/>
+                    <iframe width="190" height="400" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=190&height=400&fansRow=1&ptype=1&speed=0&skin=2&isTitle=0&noborder=0&isWeibo=1&isFans=1&uid=1468733835&verifier=1448dc03&dpc=1"></iframe>
+                    <!-- 这里是我的自我介绍：结束//-->
+                </div>
             </div>
             <div id="posts" class="posts ml200">
                 <div id="loading" class="loading" style="display:none;"> <img src="images/loading.gif"/> </div>
