--- a/index.html
+++ b/index.html
@@ -90,6 +90,18 @@
                 </div>
                 <div id="post-content" class="text">
                     <div id="post-text"></div>
+                    <div class="fr">
+                        <!-- JiaThis Button BEGIN -->
+                        <div id="ckepop">
+                        <span class="jiathis_txt">分享到：</span>
+                        <a class="jiathis_button_tsina">新浪微博</a>
+                        <a href="http://www.jiathis.com/share" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank">更多</a>
+                        <a class="jiathis_counter_style"></a>
+                        </div>
+                        <script type="text/javascript" src="http://v2.jiathis.com/code/jia.js" charset="utf-8"></script>
+                        <!-- JiaThis Button END -->
+                    </div>
+                    <div class="clear"></div>
                     <div id="disqus_thread"></div>
                     <script type="text/javascript">
                             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
