--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
         <script type="text/javascript" src="showdown.js"></script>
         <script src="highlight.pack.js"></script>
         <script type="text/javascript">
+            function conv(mkdown){
+                var converter = new Showdown.converter();
+                return converter.makeHtml(mkdown);
+            }
+
             function getParameter(name){ 
                 var search = document.location.search;
                 var pattern = new RegExp("[?&]"+name+"\=([^&]+)", "g");
@@ -119,6 +124,7 @@
                 </div>
             </div>
         </div>
+        <div class="clear"></div>
         <div class="main footer">版权申明:这个博客的所有文字版权如未经声明，均为李明（压力很大同志）所有。<br/>2012~?</div>
         <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
@@ -140,7 +146,7 @@
            <span class="fl"> <a href="index.html?p=<%=post.name%>"><%=post.title%></a></span><span class="fr timestamp mt10"> &gt;发布时间&nbsp;<%=post.date%></span>
                <span class="slear"></span>
            </dt>
-           <dd><%=post.disp%></dd>
+           <dd><%=conv(post.disp)%></dd>
            <dd> <div class="fr commend">☆   评论(<a href="index.html?p=<%=post.name%>#disqus_thread"></a>)</div></dd>
        </dl>
        <%});%>
