--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta property="wb:webmaster" content="3485ec53608fcd9d" />
         <link href="a.css" type="text/css" rel="stylesheet" charset="utf-8" />
         <link href="styles/dark.css" type="text/css" rel="stylesheet" charset="utf-8" />
         <title>压力很大的BLOG</title>
