--- a/about.html
+++ b/about.html
@@ -8,14 +8,16 @@ title: About YOUR_NAME
 </div>
 
 <div class="about_head">
-    <p>us imperdiet cursus mi congue. Cras ante augue, aliquam feugiat elementum quis, ullamcorper id lacus. Phasellus quis lectus nec elit pretium scelerisque. Aliquam leo felis, semper vel pellentesque id, tincidunt sed nisi. In lacus diam, faucibus ut euismod non, hendrerit quis sem. In quis massa vitae quam feugiat tempus. In eleifend tincidunt tellus a euismod. Aenean elementum, nisl sit amet fringilla lobortis, quam turpis consectetur urna, nec sollicitudin arcu justo vel magna.
-
-    Sed et lorem orci. Nullam consectetur elementum nibh, at aliquam metus adipiscing eget. Ut tincidunt fermentum urna, a eleifend dui volutpat eget. Integer varius nunc nec nulla tristique interdum. Suspendisse imperdiet libero sit amet lacus elementum nec dignissim dui accumsan. Curabitur at felis nunc, eu fermentum nisl. Curabitur quis ante non nisl hendrerit varius. Aliquam quis diam non massa gravida malesuada eu quis mi. Aenean tincidunt nunc vel sapien fermentum eu aliquam arcu tempor. Nulla risus</p>
-        
+    <p>
+    这人太懒，还没来得及写
+    </p>    
 </div>
 
 <h3>My Projects</h3>
-
+<div class project_container>
+    还没来得及整理
+</div>
+<!--
 <div class="projects_container">
     <table class="projects">
         <tr>
@@ -32,4 +34,4 @@ title: About YOUR_NAME
         </tr>
        
     </table>
-</div>
+</div>//-->
